Some text fixes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -40,8 +40,8 @@
 	<section class="slide">
           <h2>It's time for your questions</h2>
           <br/>
-          <p><a href="https://github.com/ir4y">Ilya Beda</a></p>
-          <p><a href="http://bro.agency">bro.agency</a></p>
+          <p><a href="https://github.com/ir4y">Ilya Beda</a><p>
+          <p>Feel free to ask me <a href="mailto:ilya@bro.agency">ilya@bro.agency</a></p>
 	</section>
 	<p class="badge">
 		<a href="https://github.com/ir4y/docker-workshop">Fork me on GitHub</a>
